site/custom.css
@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,400italic,500,600');

body {
  font-family: "Source Sans Pro", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
}


h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
  font-family: "Source Sans Pro", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: 300;
}

pre, .bs-sidebar {
  background-color: #fafafa;
}

.navbar-default {
  font-weight: 300;
}

.gist .highlight {
  font-size: 14px !important;
}

.navbar-brand {
  font-weight: 400;
}

